# NongTraiXanh

./: .flutter-plugins-dependencies  README.md  firebase.json  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json  version
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/737ce1b749477d9ce9714501945ff931/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart  outputs.json  (+8 more)
android/: local.properties
android/app/: build.gradle.kts  google-services.json
assets/audio/: README.md
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m  GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/models/: game_models.dart
lib/providers/: game_provider.dart
lib/screens/: auth_screen.dart  farm_screen.dart  game_screen.dart  house_screen.dart  intro_screen.dart
lib/services/: audio_service.dart  auth_service.dart  firebase_save_service.dart  firebase_service.dart  local_storage_service.dart
lib/utils/: constants.dart
lib/widgets/: achievement_dialog.dart  animal_panel.dart  diary_dialog.dart  farm_painter.dart  hud_widget.dart  leaderboard_dialog.dart  quest_panel.dart  shop_dialog.dart  toolbar_widget.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+23 files in other folders)
